# website

./: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  mdegans_website-b0236b396e70e488.js
.github/workflows/: pages.yml  rust.yml  sftp.yml
assets/: LICENSE.md  about.md  blog.md  doggos.json  doggos.md  drama_llama.md  gallery.json  gallery.md  games.md  jeep.md  nvalhalla.md  substream.md  sw.js  weave.md  website.md
assets/blog/: 2024-06-03-First-Log-Entry.md  2024-06-04-New-Website.md  2024-06-11-Weave-Force-Directed-Layout.md  2024-06-12-Weave-UI-enhancements.md  2024-06-14-Electrocuting-Sharks.md  2024-06-15-Weave-Force-Directed-Layout-Fixes.md  2024-06-19-LLaMA.cpp-Bug-fixes.md  2024-6-3-First-Log-Entry.md  2024-6-5-New-Weave-Features.md
src/: app.rs  blog.rs  common.rs  gallery.rs  lib.rs  main.rs  navbar.rs
src/blog/: entries.rs
src/central/: panel.rs
src/navbar/: tabs.rs
src/navbar/tabs/: home.rs  info.rs  settings.rs
